# CellularAutomaton

./: .gitignore  .pylintrc  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run.py  setup.cfg
.github/: .mypy.ini
.github/workflows/: pylint_mypy.yml  python-tests.yml  python_linting.yml
src/: __init__.py  app.py  base.py  bases.py  cell.py  cli.py  config.py  engine.py  interface.py  main.py  utils.py
src/GameOfLife/: __init__.py  app.py  config.py  main.py  utils.py
src/engines/: __init__.py  core.py
src/game/: __init__.py  app.py  base.py  cell.py  config.py  engine.py  main.py  utils.py
src/game_of_life/: __init__.py  app.py  cell.py  config.py  life.py  main.py  utils.py
src/interfaces/: __init__.py  elements.py
src/misc/: handlers.py  logs.py  states.py  type_aliases.py  utils.py
src/tests/: test_cell.py
tests/: test_cli.py
